test/files/pos/t5504/s_2.scala
// b.scala
package foo

object Test {
  def main(args: Array[String]): Unit = {
    println(foo.m)
  }
}
