test/files/neg/t7251/B_2.scala
package s

object Test {
  def main(args: Array[String]): Unit = {
    println( s.Outer$Triple$ )
  }
}
